Split server/client services - Add Rest services for server and client - Add tests for Rest - Fix warnings and bugs